exports[`test checks a list of schedules to see if any are open 1`] = `
Array [
  Object {
    "isActive": true,
    "label": "Hours",
    "status": "10:30am — 2:00am",
  },
]
`;

exports[`test handles multiple internal schedules for the same timeframe 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30am — 12:00pm",
  },
  Object {
    "isActive": true,
    "label": "Hours",
    "status": "1:00pm — 3:00pm",
  },
]
`;

exports[`test handles multiple named schedules for the same timeframe 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30am — 12:00pm",
  },
  Object {
    "isActive": false,
    "label": "Hours2",
    "status": "10:30am — 12:00pm",
  },
  Object {
    "isActive": true,
    "label": "Hours2",
    "status": "1:00pm — 3:00pm",
  },
]
`;

exports[`test returns a list of [isOpen, scheduleName, verboseStatus] tuples 1`] = `
Array [
  Object {
    "isActive": true,
    "label": "Hours",
    "status": "10:30am — 2:00am",
  },
]
`;

exports[`test returns false if none are available for this day 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "Closed today",
  },
]
`;

exports[`test returns false if none are open 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30am — 2:00pm",
  },
]
`;
